# booking_places_in_cafe

./: .gitignore  LICENSE  README.md
.github/workflows/: main.yml
admin_panel/: Dockerfile  README.md  base_data.json  dep.sh  pyproject.toml
admin_panel/admin_panel/: asgi.py  settings.py  urls.py  wsgi.py
admin_panel/asserts/css/: styles.css
admin_panel/azucafe/: admin.py  apps.py  constants.py  models.py  robokassa.py  urls.py  views.py  views_booking.py  views_error.py  views_payments.py
admin_panel/templates/: base.html
admin_panel/templates/azucafe/: booking.html  cafe_detail.html  index.html  logged_out.html  profile.html
admin_panel/templates/errors/: 403.html  403csrf.html  404.html  500.html
admin_panel/templates/includes/: header.html
admin_panel/templates/payments/: payment_base.html  payment_fail.html  payment_header.html  payment_order_detail.html  payment_success.html
bot/: .dockerignore  Dockerfile  Makefile  dep.sh  main.py  pyproject.toml  setup.cfg
bot/alembic/: env.py
bot/alembic/versions/: 380592f49f55_04_add_remind_show_field.py  583ac24d4d9b_02_update_job_model.py  90c4ccaf0af2_03_add_payments_control_model.py  9f9ddd314157_05_add_sign_of_booking_by_administrator.py  f1cacb3a65d8_01_init_db.py
bot/core/: config.py  constants.py  db.py
bot/crud/: base.py  order.py  worker.py
bot/models/: __init__.py  models.py
bot/modules/: __init__.py  booking.py  booking_detail.py  cafe.py  date.py  guests.py  helper.py  menu.py  misc.py  payment.py  start.py  timers.py
infra/: docker-compose_local_dev.yml  docker-compose_prod.yml
(+4 files in other folders)
